--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-<!-- MAZE HACKED DEMO -->
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Romotive's Drag and Drop Powered by Blockly</title>
+  <title>Romotive's Drag and Drop Powered by Blockly, Created by Dominick Lim</title>
   <link type="text/css" rel="stylesheet" href="css/maze_hacked.css">
+  <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body height="100%">
   <div>
     <h1 style="width:500px; float:left; padding-left:5px;">
-      <a href="http://romotive.com">Romotive</a>'s Drag and Drop Environment Powered by <a href="http://code.google.com/p/blockly/">Blockly</a>
+      <a href="http://romotive.com">Romotive</a>'s Drag and Drop Environment Powered by <a href="http://code.google.com/p/blockly/">Blockly</a>, Created by <a href="http://dominicklim.com">Dominick Lim</a>
     </h1>
     <div id="blockButtonDiv">
       <button class="clear" onclick="discard()">Clear Blocks</button>
