--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         <div>
           <svg xmlns="http://www.w3.org/2000/svg" version="1.1" id="svgMaze" width="500px" height="500px" onclick="Maze.mazeClick(event)">
         </div>
+        <div id="wallExplanation">
+          Click on a square above to place a wall there.
+        </div>
         <div id="runButtonDiv">
 
           <button class="clear" onclick="Maze.clearWalls()">Clear Walls</button>
